--- a/YUKI.N/YUKI.N.css
+++ b/YUKI.N/YUKI.N.css
@@ -1,10 +1,7 @@
 ﻿@font-face {
   font-family: 'yuki.n';
   font-style: normal;
-  src: url(./yuki.n.eot);
-  src: url(./yuki.n.eot?#iefix) format('embedded-opentype'),
-       url(./yuki.n.woff) format('woff'),
-       url(./yuki.n.ttf) format('truetype');
+  src: url(./yuki.n.ttf) format('truetype');
 }
 BODY,div {
         font-family: "ＭＳ ゴシック", "Osaka－等幅", "yuki.n";
